data/all_generated_tests/raw_wast_tests/block_StackCorruption_1872.wast
;; 3. **Test Description**: Perform a series of `br` and `br_if` instructions within a block to sections of code that should not require certain stack depths or values, conditional on different branch conditions that are difficult to track manually.    - **Constraint**: Ensures branch instructions correctly unwind and manage the operand stack.    - **Relation to Stack Corruption**: If the branches do not correctly manage the stack, it could lead to accessing invalid stack data.

(assert_invalid
  (module (func $branch-depth-check (result i32)
    (block (result i32)
      (i32.const 0)
      (br_if 0 (i32.const 1)) ; conditional branch
      (i32.const 2) ; this would be skipped if branch taken
    )
    (i32.add) ; stack should contain two i32 values, error if not
  ))
  "type mismatch"
)